--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ show_aboutme_card: true
 # about_me_title: The will be displayed as the title in the About Me section
 about_me_title: About Us
 # about_me_description: This will be displayed under the title.
-about_me_description: ShadowFlash is a WhatsApp group filled with good people from around the world.
+about_me_description: ShadowFlash is a WhatsApp group filled with a great community with people from all regions in the world.
 
 # SKILLS SECTION
 # show_skills_card:
